correction of media query, somethngs is not aligning here

--- a/index.css
+++ b/index.css
@@ -80,13 +80,12 @@ body {
         height: 100%;
         margin: 0;
         padding: 0;
-        overflow: hidden;
     }
 
     .container {
         max-width: 100%;
         width: 100%;
-        max-height: 100%;  
+        max-height: 90%;  
         padding: 20px 40px;
         border-radius: 0;
         display: flex;
